[gd_scene load_steps=17 format=3 uid="uid://c53voml4ras4t"]

[ext_resource type="Script" path="res://Scenes/Menu/Menu.gd" id="1_iaohr"]
[ext_resource type="Texture2D" uid="uid://y56lcjmtpklv" path="res://Scenes/Menu/ecran noir.png" id="2_4abhv"]
[ext_resource type="FontFile" uid="uid://dt7r1p1bnol2g" path="res://Scenes/typographie/BabaMediumPixels.ttf" id="2_a1l3a"]
[ext_resource type="Texture2D" uid="uid://ck4fbu8svjq7f" path="res://Scenes/Menu/MenuTileset1xPadding.png" id="2_cyh2k"]
[ext_resource type="Texture2D" uid="uid://876hsdhhb3fl" path="res://Scenes/Menu/Sprite/cercle de lumiere.png" id="3_8rfpg"]
[ext_resource type="Texture2D" uid="uid://bofbinlrt2yd3" path="res://Scenes/Menu/MenuTileset.png" id="3_jnq4t"]
[ext_resource type="Texture2D" uid="uid://bln8mrb5xm77l" path="res://Scenes/Menu/Sprite/light.png" id="4_rxkth"]
[ext_resource type="AudioStream" uid="uid://cb066tencjj4u" path="res://Scenes/audio/Tenebre_Rosso_Sangue_VRC6_Remix.wav" id="5_306qw"]
[ext_resource type="AudioStream" uid="uid://dk8fdnuuy2hys" path="res://Scenes/audio/Dont_Worry_Cosmic_Trip.mp3" id="6_0klh1"]
[ext_resource type="AudioStream" uid="uid://bfg5vnt6qwcs1" path="res://Scenes/audio/jr.mp3" id="7_oq8rc"]
[ext_resource type="Texture2D" uid="uid://d0kyffj5g7hxs" path="res://Scenes/Menu/Sprite/sang buttontest.png" id="8_l6p05"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4k4m1"]
texture = ExtResource("2_cyh2k")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2fuh8"]
texture = ExtResource("3_jnq4t")
0:0/next_alternative_id = 2
0:0/0 = 0
1:0/next_alternative_id = 2
1:0/0 = 0
2:0/next_alternative_id = 2
2:0/0 = 0
3:0/0 = 0
0:1/next_alternative_id = 2
0:1/0 = 0
1:1/next_alternative_id = 2
1:1/0 = 0
2:1/next_alternative_id = 2
2:1/0 = 0
3:1/0 = 0
0:2/next_alternative_id = 2
0:2/0 = 0
1:2/next_alternative_id = 2
1:2/0 = 0
2:2/next_alternative_id = 2
2:2/0 = 0
3:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
0:8/0 = 0
1:8/0 = 0
1:9/0 = 0
2:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
4:11/0 = 0
5:11/0 = 0
5:12/0 = 0
6:12/0 = 0
4:12/0 = 0
3:12/0 = 0
2:11/0 = 0
1:11/0 = 0
0:10/0 = 0
1:12/0 = 0
0:12/0 = 0
0:11/0 = 0
0:9/0 = 0
1:10/0 = 0
2:8/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
3:8/0 = 0
3:9/0 = 0
4:7/0 = 0
4:6/0 = 0
4:5/0 = 0
5:4/0 = 0
5:3/0 = 0
5:5/0 = 0
4:8/0 = 0
4:9/0 = 0
5:6/0 = 0
5:2/0 = 0
6:1/0 = 0
6:0/0 = 0
5:1/0 = 0
4:4/0 = 0
4:3/0 = 0
4:1/0 = 0
4:0/0 = 0
5:0/0 = 0
4:2/0 = 0
7:1/0 = 0
6:2/0 = 0
7:0/0 = 0
7:2/0 = 0
6:3/0 = 0
7:3/0 = 0
6:4/0 = 0
6:5/0 = 0
7:4/0 = 0
7:5/0 = 0
7:6/0 = 0
6:6/0 = 0
5:7/0 = 0
7:7/0 = 0
6:8/0 = 0
5:8/0 = 0
7:8/0 = 0
6:7/0 = 0
6:9/0 = 0
5:9/0 = 0
3:11/0 = 0
6:11/0 = 0
7:10/0 = 0
7:11/0 = 0
5:13/0 = 0
4:14/0 = 0
4:13/0 = 0
7:12/0 = 0
7:13/0 = 0
6:13/0 = 0
6:14/0 = 0
7:14/0 = 0
7:9/0 = 0
6:10/0 = 0
0:3/0 = 0
2:12/0 = 0
2:13/0 = 0
3:13/0 = 0
2:14/0 = 0
1:14/0 = 0
3:14/0 = 0
0:14/0 = 0
0:13/0 = 0
1:13/0 = 0
5:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8wd6p"]
texture = ExtResource("4_rxkth")
1:0/0 = 0
2:0/0 = 0
1:1/0 = 0
2:1/0 = 0
1:2/0 = 0
2:2/0 = 0
1:3/0 = 0
2:3/0 = 0
0:1/0 = 0
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_6jphu"]
resource_local_to_scene = true
sources/0 = SubResource("TileSetAtlasSource_4k4m1")
sources/1 = SubResource("TileSetAtlasSource_2fuh8")
sources/2 = SubResource("TileSetAtlasSource_8wd6p")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mgu3w"]
streams_count = 3
stream_0/stream = ExtResource("5_306qw")
stream_0/weight = 0.0
stream_1/stream = ExtResource("6_0klh1")
stream_1/weight = 0.0
stream_2/stream = ExtResource("7_oq8rc")
stream_2/weight = 0.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iaohr")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4abhv")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="decor dessus Menu" type="TileMap" parent="MarginContainer"]
position = Vector2(-546, -284)
tile_set = SubResource("TileSet_6jphu")
format = 2
layer_0/tile_data = PackedInt32Array(262179, 65538, 0, 35, 65538, 0, 65571, 65538, 0, 131107, 65538, 0, 65572, 131074, 0, 36, 131074, 0, 196643, 65538, 0, 262180, 131074, 0, 327716, 131074, 0, 393252, 131074, 0, 458788, 131074, 0, 196644, 131074, 0, 131108, 131074, 0, 327715, 65538, 0, 393251, 65538, 0, 458787, 65538, 0, 524323, 65538, 0, 589859, 65538, 1, 524324, 131074, 0, 589860, 131074, 1, 655396, 131074, 2, 655395, 65538, 2, 720931, 65538, 3, 720932, 131074, 3)

[node name="PointLight2D" type="PointLight2D" parent="MarginContainer"]
position = Vector2(30, 6)
scale = Vector2(3.01953, 9.17969)
color = Color(0.691576, 0.46968, 0.27324, 1)
energy = 16.0
shadow_enabled = true
texture = ExtResource("3_8rfpg")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a1l3a")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a1l3a")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_a1l3a")
text = "Exit"

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Quit"]
layout_mode = 0
offset_left = -32.0
offset_top = -7.0
offset_right = 67.0
offset_bottom = 57.0
texture_normal = ExtResource("8_l6p05")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_mgu3w")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit/TextureButton" to="." method="_on_texture_button_pressed"]
